--- a/src/components/Example.css
+++ b/src/components/Example.css
@@ -5,3 +5,14 @@
   margin: 50px auto;
 }
 
+.sample_no1 {
+  /* margin-top: 20px; */
+  margin-right: 15px;
+  vertical-align: middle;
+}
+
+.sample_no2 {
+  /* margin-top: 20px; */
+  margin-left: 15px;
+  vertical-align: middle;
+}
