--- a/src/components/Completed.css
+++ b/src/components/Completed.css
@@ -4,3 +4,16 @@
   max-width: 1200px;
   margin: 50px auto;
 }
+
+.completed_box {
+  width: 800px;
+  margin: 10px auto;
+  border-style: solid;
+  border-width: 2px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 10px; 
+  max-width: 100%;
+  text-align: center;
+
+}
