--- a/src/components/Example.css
+++ b/src/components/Example.css
@@ -8,11 +8,26 @@
 .sample_no1 {
   /* margin-top: 20px; */
   margin-right: 15px;
+  margin-bottom: 0px;
   vertical-align: middle;
 }
 
 .sample_no2 {
   /* margin-top: 20px; */
   margin-left: 15px;
+  margin-bottom: 0px;
   vertical-align: middle;
+}
+
+.ex_question_box {
+  width: 800px;
+  margin: 10px auto;
+  border-style: solid;
+  border-width: 2px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 10px; 
+  max-width: 100%;
+  text-align: center;
+
 }
