--- a/src/components/StartPage.css
+++ b/src/components/StartPage.css
@@ -24,3 +24,16 @@
   margin-left: 15px;
   /* vertical-align: middle; */
 }
+
+.info_box {
+  width: 700px;
+  margin: 10px auto;
+  border-style: solid;
+  border-width: 2px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-bottom: 10px; 
+  max-width: 100%;
+  text-align: center;
+
+}
