--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,3 @@
-/* @font-face {
-  font-family: 'Cafe24Oneprettynight';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.1/Cafe24Oneprettynight.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
- */
-/* @font-face {
-  font-family: 'ELAND_Nice_M';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/ELAND_Nice_M.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
- */
-
-/* @font-face {
-  font-family: 'Y_Spotlight';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/Y_Spotlight.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-} */
-
-
 @font-face {
   font-family: 'GmarketSansMedium';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
@@ -85,44 +62,8 @@
   -webkit-font-smoothing: antialiased;
 }
 
-/* .btn-custom.disabled, .btn-custom:disabled {
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
-} */
 
-/* .btn-custom:hover {
-  background: #2baf7f;
-  /* cursor: pointer; 
-}
-/* .btn-custom:active:enabled {
-  background: #2baf7f;
-  /* cursor: pointer; 
-}
-
-.btn-custom:hover:enabled {
-  background: #13583f;
-  /* cursor: pointer; 
-}
-.btn-custom:enabled {
-  background: #13583f;
-  /* cursor: pointer;
-}
-/* 
-.btn-custom:not(:disabled):not(.disabled):active, .btn-custom:not(:disabled):not(.disabled).active,
-.show > .btn-custom.dropdown-toggle {
-  color: #fff;
-  background-color: #0062cc;
-  border-color: #005cbf;
-}
-
-.btn-custom:not(:disabled):not(.disabled):active:focus, .btn-custom:not(:disabled):not(.disabled).active:focus,
-.show > .btn-custom.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-} */
-
-
-
+/* bootstrap 버튼 커스텀 */
 .btn-primary {
   color: #fff;
   background-color: #0bb8a7 !important;
@@ -142,24 +83,6 @@
 }
 
 
-.btn-primary:focus, .btn-primary.focus {
-  color: #fff;
-  background-color: #0069d9;
-  border-color: #0062cc;
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-}
-
-.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
-.show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #0062cc;
-  border-color: #005cbf;
-}
-
-.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
-.show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-}
 
 
 
@@ -175,12 +98,6 @@
   border-color: #4f5baa !important;
 }
 
-.btn-secondary:focus, .btn-secondary.focus {
-  color: #fff;
-  background-color: #0069d9;
-  border-color: #0062cc;
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-}
 
 .btn-secondary.disabled, .btn-secondary:disabled {
   color: #fff;
@@ -188,17 +105,6 @@
   border-color: #b3baec !important;
 }
 
-.btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
-.show > .btn-secondary.dropdown-toggle {
-  color: #fff;
-  background-color: #0062cc;
-  border-color: #005cbf;
-}
-
-.btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus,
-.show > .btn-secondary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-}
 
 
 
@@ -212,25 +118,4 @@
   color: #fff !important;
   background-color: #7f8ce2 !important;
   border-color: #7f8ce2 !important;
-}
-
-.btn-outline-success:focus, .btn-outline-success.focus {
-  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
-}
-
-.btn-outline-success.disabled, .btn-outline-success:disabled {
-  color: #28a745;
-  background-color: transparent;
-}
-
-.btn-outline-success:not(:disabled):not(.disabled):active, .btn-outline-success:not(:disabled):not(.disabled).active,
-.show > .btn-outline-success.dropdown-toggle {
-  color: #fff;
-  background-color: #28a745;
-  border-color: #28a745;
-}
-
-.btn-outline-success:not(:disabled):not(.disabled):active:focus, .btn-outline-success:not(:disabled):not(.disabled).active:focus,
-.show > .btn-outline-success.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(40, 167, 69, 0.5);
 }
